ext/yuni/nany/tests/invalid/missing_brace_function.ny
# This test has a function with no closing brace


function bar(x, y) { math.sqrt(x^x + y^y)

function foo
{
	if true then
	{
		doSomething
	}
	else
	{
	}
}

function main
{
	0
}
